test-data/module-output.test
-- Test cases for C generation. Generally it is better to write evaluation test cases
-- for most things, but these are useful for sanity checking the generated C code.

[case testTrivialFunctionOutput]
def f(x: int) -> int:
    return x
[out]
#include <Python.h>
#include <CPy.h>

static CPyModule *CPyStatic_module = Py_None;
static PyObject *CPyStatic_globals;
static CPyModule *CPyStatic_builtins_module = Py_None;
static PyObject *CPyStatic_unicode_0;
static CPyTagged CPyDef_f(CPyTagged cpy_r_x);
static PyObject *CPyPy_f(PyObject *self, PyObject *args, PyObject *kw);
static PyObject *CPyDef___top_level__(void);
static int CPyLiteralsInit(void)
{
    static int is_initialized = 0;
    if (is_initialized) return 0;

    CPyStatic_unicode_0 = PyUnicode_FromStringAndSize("builtins", 8);
    if (CPyStatic_unicode_0 == NULL)
        return -1;
    is_initialized = 1;
    return 0;
}

static PyMethodDef module_methods[] = {
    {"f", (PyCFunction)CPyPy_f, METH_VARARGS | METH_KEYWORDS, NULL /* docstring */},
    {NULL, NULL, 0, NULL}
};

static struct PyModuleDef module = {
    PyModuleDef_HEAD_INIT,
    "prog",
    NULL, /* docstring */
    -1,       /* size of per-interpreter state of the module,
                 or -1 if the module keeps state in global variables. */
    module_methods
};

PyMODINIT_FUNC PyInit_prog(void)
{
    if (CPyStatic_module != Py_None) {
        Py_INCREF(CPyStatic_module);
        return CPyStatic_module;
    }
    CPyStatic_module = PyModule_Create(&module);
    if (CPyStatic_module == NULL)
        return NULL;
    PyObject *modname = PyObject_GetAttrString((PyObject *)CPyStatic_module, "__name__");
    CPyStatic_globals = PyModule_GetDict(CPyStatic_module);
    if (CPyStatic_globals == NULL)
        return NULL;
    if (CPyLiteralsInit() < 0)
        return NULL;
    PyObject *result = CPyDef___top_level__();
    if (result == NULL)
        return NULL;
    Py_DECREF(result);
    Py_DECREF(modname);
    return CPyStatic_module;
}

static CPyTagged CPyDef_f(CPyTagged cpy_r_x) {
CPyL0: ;
    CPyTagged_IncRef(cpy_r_x);
    return cpy_r_x;
}

static PyObject *CPyPy_f(PyObject *self, PyObject *args, PyObject *kw) {
    static char *kwlist[] = {"x", 0};
    PyObject *obj_x;
    if (!PyArg_ParseTupleAndKeywords(args, kw, "O:f", kwlist, &obj_x)) {
        return NULL;
    }
    CPyTagged arg_x;
    if (PyLong_Check(obj_x))
        arg_x = CPyTagged_BorrowFromObject(obj_x);
    else {
        PyErr_SetString(PyExc_TypeError, "int object expected");
        return NULL;
    }
    CPyTagged retval = CPyDef_f(arg_x);
    if (retval == CPY_INT_TAG) {
        return NULL;
    }
    PyObject *retbox = CPyTagged_StealAsObject(retval);
    return retbox;
}

static PyObject *CPyDef___top_level__(void) {
    PyObject *cpy_r_r0;
    PyObject *cpy_r_r1;
    char cpy_r_r2;
    PyObject *cpy_r_r3;
    PyObject *cpy_r_r4;
    PyObject *cpy_r_r5;
    PyObject *cpy_r_r6;
CPyL0: ;
    cpy_r_r0 = CPyStatic_builtins_module;
    cpy_r_r1 = Py_None;
    cpy_r_r2 = cpy_r_r0 != cpy_r_r1;
    if (cpy_r_r2) {
        goto CPyL3;
    } else
        goto CPyL1;
CPyL1: ;
    cpy_r_r3 = CPyStatic_unicode_0; /* 'builtins' */
    cpy_r_r4 = PyImport_Import(cpy_r_r3);
    if (unlikely(cpy_r_r4 == NULL)) {
        CPy_AddTraceback("prog.py", "<module>", -1, CPyStatic_globals);
        goto CPyL4;
    } else
        goto CPyL2;
CPyL2: ;
    Py_INCREF(cpy_r_r4);
    CPyStatic_builtins_module = cpy_r_r4;
    CPy_DECREF(cpy_r_r4);
    goto CPyL3;
CPyL3: ;
    cpy_r_r5 = Py_None;
    CPy_INCREF(cpy_r_r5);
    return cpy_r_r5;
CPyL4: ;
    cpy_r_r6 = NULL;
    return cpy_r_r6;
}
[case testError]
def f(x: List[int]) -> None: pass
[out]
prog.py:1: error: Name 'List' is not defined
